[package]
name = "str_stack"
description = """A string allocator for allocating many write-once strings.

This library is primarily useful for parsing where you need to repeatedly build
many strings, use them, and then throw them away. Instead of allocating many independent strings, this library will put them all in the same buffer.
"""

version = "0.1.0"
authors = ["Steven Allen <steven@stebalien.com>"]
license = "MIT/Apache-2.0"
keywords = ["string", "dst", "stack"]
repository = "https://github.com/Stebalien/str_stack"
documentation = "https://stebalien.github.io/str_stack/str_stack/"
